resolve merge pdf PyPDFv2 cannot merge large pdf (must find a solution)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "manga2pdf\\Scripts\\python.exe"
+    "python.pythonPath": "manga2pdf\\Scripts\\python.exe",
+    "editor.renderWhitespace": "all"
 }
