add requirements.txt file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "manga2pdf\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Python37\\python.exe",
     "editor.renderWhitespace": "all"
 }
